@@ -1,5 +1,4 @@
 var CloudCmd, Util, DOM, $, filepicker;
-/* module for work with filepicker */
 
 (function(CloudCmd, Util, DOM){
     'use strict';
@@ -43,14 +42,20 @@ var CloudCmd, Util, DOM, $, filepicker;
         
         function load(pCallBack){
             console.time('filepicker load');
-            var lHTTP = "https:"===document.location.protocol? "https:" : "http:";
+            var lHTTP = document.location.protocol;
             
             DOM.jsload(lHTTP + '//api.filepicker.io/v1/filepicker.js', function(){
-                filepicker.setKey('AACq5fTfzRY2E_Rw_4kyaz');
-                DOM.Images.hideLoad();
-                console.timeEnd('filepicker loaded');
-                Util.exec(pCallBack);
-            });
+                CloudCmd.getModules(function(pModules){
+                    var lStorage    = Util.findObjByNameInArr(pModules, 'storage'),
+                        lFilePicker = Util.findObjByNameInArr(lStorage, 'FilePicker'),
+                        lKey        = lFilePicker && lFilePicker.key;
+                        
+                        filepicker.setKey(lKey);
+                        DOM.Images.hideLoad();
+                        console.timeEnd('filepicker loaded');
+                        Util.exec(pCallBack);
+                    });
+                });
         }
     };
     
